# rxos

./: .gitignore  README.md
.cargo/: config.toml
kernel/: Cargo.toml
kernel/src/: acpi_controller.rs  allocator.rs  apic.rs  interrupts.rs  lib.rs  main.rs  memory.rs  vga_buffer.rs
kernel/src/hardware/: rtc.rs
kernel/src/task/: executor.rs  keyboard.rs  mod.rs
kernel/src/threading/: context_switch.rs  mod.rs  scheduler.rs  thread.rs
kernel/tests/: basic_boot.rs  heap_allocation.rs
