[package]
name = "kernel"
version = "0.1.0"
authors = ["Luuk van Oijen <lazyluuk.channel@gmail.com>"]
edition = "2018"

[dependencies]
rlibc = "1.0.0"
bootloader = { version = "0.9.8", features = ["map_physical_memory"] }
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.11.1"

#IO
uart_16550 = "0.2.0" #Serial
pic8259_simple = "0.2.0" #Primary interrupt controller
pc-keyboard = "0.5.0"

#Heap allocators
linked_list_allocator = "0.8.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none",
]
test-success-exit-code = 33         # (0x10 << 1) | 1
test-timeout = 300                  # in seconds

run-args = [
    "-m", "256M"
]
